--- a/WineShopClient/bin/assegnamento3/customer.fxml
+++ b/WineShopClient/bin/assegnamento3/customer.fxml
@@ -8,31 +8,59 @@
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="594.0" prefWidth="603.0" style="-fx-focus-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assegnamento3.CustomerController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="620.0" prefWidth="603.0" style="-fx-focus-color: transparent;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="assegnamento3.CustomerController">
    <children>
-      <AnchorPane prefHeight="87.0" prefWidth="603.0" style="-fx-focus-color: transparent;">
+      <AnchorPane prefHeight="109.0" prefWidth="603.0" style="-fx-focus-color: transparent;">
          <children>
-            <TextField fx:id="searchTextField" layoutX="136.0" layoutY="50.0" prefHeight="27.0" prefWidth="264.0" />
-            <Button fx:id="searchButton" defaultButton="true" layoutX="400.0" layoutY="51.0" mnemonicParsing="false" onAction="#search" text="Search" />
-            <Button fx:id="logoutButton" layoutX="524.0" layoutY="10.0" mnemonicParsing="false" onAction="#logout" prefHeight="62.0" prefWidth="61.0" text="Logout" wrapText="true" />
-            <Label layoutX="255.0" layoutY="11.0" text="WineShop">
+            <ImageView fitHeight="105.0" fitWidth="603.0" pickOnBounds="true" smooth="false">
+               <image>
+                  <Image url="@home_top.jpg" />
+               </image>
+            </ImageView>
+            <TextField fx:id="searchTextField" layoutX="188.0" layoutY="61.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="299.0" promptText="Search Wine" style="-fx-background-radius: 10; -fx-border-radius: 10;" />
+            <Button fx:id="searchButton" defaultButton="true" layoutX="452.0" layoutY="61.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#search" prefHeight="27.0" prefWidth="36.0" style="-fx-background-radius: 10; -fx-border-radius: 10; -fx-background-color: transparent;">
+               <graphic>
+                  <ImageView fitHeight="22.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@search.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Button fx:id="logoutButton" layoutX="553.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#logout" prefHeight="34.0" prefWidth="36.0" style="-fx-background-color: #5b0417; -fx-background-radius: 200; -fx-border-radius: 200;" wrapText="true">
+               <graphic>
+                  <ImageView fitHeight="34.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@logout.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
+            <Label layoutX="215.0" layoutY="10.0" text="WineShop" textAlignment="CENTER" textFill="WHITE">
                <font>
-                  <Font size="20.0" />
+                  <Font name="Verdana Bold" size="35.0" />
                </font>
             </Label>
-            <RadioButton fx:id="nameRadioButton" layoutX="10.0" layoutY="48.0" mnemonicParsing="false" scaleX="0.8" scaleY="0.8" selected="true" text="Name">
+            <RadioButton fx:id="nameRadioButton" layoutX="3.0" layoutY="59.0" mnemonicParsing="false" scaleX="0.8" scaleY="0.8" selected="true" text="Name" textFill="WHITE">
                <toggleGroup>
                   <ToggleGroup fx:id="searchToggleGroup" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="yearRadioButton" layoutX="10.0" layoutY="63.0" mnemonicParsing="false" scaleX="0.8" scaleY="0.8" text="Year" toggleGroup="$searchToggleGroup" />
-            <ChoiceBox fx:id="typeChoiceBox" layoutX="75.0" layoutY="51.0" prefHeight="25.0" prefWidth="61.0" />
-            <Button fx:id="mexButton" layoutX="15.0" layoutY="14.0" mnemonicParsing="false" onAction="#displayMessages" text="Mex" />
+            <RadioButton fx:id="yearRadioButton" layoutX="3.0" layoutY="75.0" mnemonicParsing="false" scaleX="0.8" scaleY="0.8" text="Year" textFill="WHITE" toggleGroup="$searchToggleGroup" />
+            <ChoiceBox fx:id="typeChoiceBox" layoutX="133.0" layoutY="61.0" minWidth="-Infinity" prefHeight="27.0" prefWidth="55.0" style="-fx-background-radius: 10; -fx-border-radius: 10; -fx-background-color: white;" />
+            <Button fx:id="mexButton" layoutX="15.0" layoutY="14.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#displayMessages" prefHeight="30.0" prefWidth="30.0" style="-fx-background-color: #480322; -fx-background-radius: 200; fx-border-radius: 200;">
+               <graphic>
+                  <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@message.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
          </children>
       </AnchorPane>
       <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" minWidth="555.0" prefHeight="511.0" prefWidth="603.0" style="-fx-focus-color: transparent;" vbarPolicy="ALWAYS">
