--- a/WineShopClient/src/assegnamento3/port_popup.fxml
+++ b/WineShopClient/src/assegnamento3/port_popup.fxml
@@ -7,8 +7,8 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="164.0" prefWidth="191.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Button id="connectButton" defaultButton="true" layoutX="68.0" layoutY="107.0" mnemonicParsing="false" text="Connect" />
       <TextField id="portTextField" layoutX="84.0" layoutY="52.0" prefHeight="25.0" prefWidth="64.0" />
       <Label layoutX="43.0" layoutY="56.0" text="Port:" />
+      <Button id="connectButton" defaultButton="true" layoutX="70.0" layoutY="101.0" mnemonicParsing="false" text="Confirm" />
    </children>
 </AnchorPane>
